fix layout issue

--- a/css/style.css
+++ b/css/style.css
@@ -389,7 +389,7 @@ figcaption {
   .nav__logo {
     font-size: 1.5rem;
   }
-  .heroimg,  {
+  .heroimg  {
     height: 280px;
   }
   figure {
